--- a/.github/workflows/keyword-extractor.yml
+++ b/.github/workflows/keyword-extractor.yml
@@ -43,47 +43,11 @@ jobs:
         run: python scripts/keyword_extractor.py
         env:
           COUNTRY: "us"
+          HEADLESS: "true"
+          WAIT_TIME: "10"
         
-      - name: Clean up data
-        run: |
-          python - <<EOF
-          import json
-          import os
-          from pathlib import Path
-          
-          data_dir = Path("data")
-          
-          # Process all JSON files in the data directory
-          for file_path in data_dir.glob("*.json"):
-              if file_path.name == "summary_report.json":
-                  continue
-                  
-              try:
-                  with open(file_path, "r") as f:
-                      data = json.load(f)
-                      
-                  # Clean up "people_also_search_for" data
-                  if "people_also_search_for" in data:
-                      # Remove entries with common unwanted phrases
-                      unwanted = ["more products", "see more", "view all", "shop now", "curbside", "pick up today"]
-                      data["people_also_search_for"] = [
-                          item for item in data["people_also_search_for"] 
-                          if item and not any(phrase in item.lower() for phrase in unwanted)
-                      ]
-                      
-                      # Remove entries that are just numbers or very short
-                      data["people_also_search_for"] = [
-                          item for item in data["people_also_search_for"] 
-                          if len(item) > 3 and not item.replace(".", "").isdigit()
-                      ]
-                      
-                  # Write the cleaned data back
-                  with open(file_path, "w") as f:
-                      json.dump(data, f, indent=2)
-                      
-              except Exception as e:
-                  print(f"Error processing {file_path}: {e}")
-          EOF
+      - name: Run data cleanup
+        run: python scripts/data_cleanup.py
         
       - name: Commit and push results
         run: |
